Successfully showed an empty Google Map.

--- a/LocationProject/app/src/main/AndroidManifest.xml
+++ b/LocationProject/app/src/main/AndroidManifest.xml
@@ -11,6 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAmrXN_whA0mS-vGhe_katjPlrcha1Bq9U" />
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
