--- a/LocationProject/app/build.gradle
+++ b/LocationProject/app/build.gradle
@@ -32,5 +32,7 @@ dependencies {
     compile 'com.google.guava:guava:18.0'
     compile 'com.squareup.okhttp:okhttp:2.5.0'
 
+    compile 'com.google.android.gms:play-services:9.8.0'
+
     testCompile 'junit:junit:4.12'
 }
