--- a/LocationProject/gradle.properties
+++ b/LocationProject/gradle.properties
@@ -15,3 +15,5 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+GOOGLE_MAPS_API_KEY= AIzaSyAmrXN_whA0mS-vGhe_katjPlrcha1Bq9U
